Added a Print Studio Flow.

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PrintLocal - 3D Printing Marketplace</title>
+    <title>Swift Prints - P2P 3D Printing Marketplace</title>
     <meta name="description" content="Get your 3D prints from local makers. Upload your STL file for instant quotes." />
-    <meta name="author" content="PrintLocal" />
+    <meta name="author" content="Absurd Industries" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e0c6d65845.js" crossorigin="anonymous"></script>
 
     <meta property="og:title" content="609076d4-2e19-43a4-b3e4-bf5fa793619b" />
     <meta property="og:description" content="Lovable Generated Project" />
