refactor: implement duration formatting for print time across components and update HTML meta tags

--- a/apps/frontend-hack/index.html
+++ b/apps/frontend-hack/index.html
@@ -6,6 +6,7 @@
     <title>Swift Prints - 3D Printing Service</title>
     <meta name="description" content="Get your 3D prints from local makers. Upload your STL file for instant quotes." />
     <meta name="author" content="Swift Prints" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
