--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -4,21 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swift Prints - P2P 3D Printing Marketplace</title>
-    <meta name="description" content="Get your 3D prints from local makers. Upload your STL file for instant quotes." />
+    <meta
+      name="description"
+      content="Get your 3D prints from local makers. Upload your STL file for instant quotes."
+    />
     <meta name="author" content="Absurd Industries" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e0c6d65845.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/e0c6d65845.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <meta property="og:title" content="609076d4-2e19-43a4-b3e4-bf5fa793619b" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta
+      property="og:title"
+      content="609076d4-2e19-43a4-b3e4-bf5fa793619b"
+    />
+    <meta
+      property="og:description"
+      content="Lovable Generated Project"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
